Add "concurrent mode interrupted" trigger identification and analysis.